<resources>
    <string name="app_name">HT_3.1</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="signDot">.</string>
    <string name="signC">C</string>
    <string name="signPlusMinus">+/-</string>
    <string name="signPercent">%</string>
    <string name="signDivision">/</string>
    <string name="signMultiplication">*</string>
    <string name="signPlus">+</string>
    <string name="signMinus">-</string>
    <string name="signEquality">=</string>
</resources>